[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "johnston_ttu"
version = "0.0.1"
authors = [
	{name="Derek Johnston", email="derek.a.johnston@ttu.edu"}
]
description = "A Python package for research done in the Johnston Group."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approced :: MIT License",
	"Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject/"